--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="right">
-            <img src="{{ asset("images/house.png") }}" width="400px">
+            <img src="images/house.png" width="400px">
         </div>
     </div>
 </body>
