--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Register</title>
-    <link rel="stylesheet"sign.css">
+    <link rel="stylesheet"css/sign.css">
 </head>
 <body>
     <div class="container" style="display: flex;">
