--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container" style="display: flex;">
         <div class="left_form">
-            <form action="{{ route("register.submit") }}" method="POST">
+            <form method="POST">
                 <h2>Register</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing</p>
                 <div class="div_name">
